--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -2,9 +2,37 @@
 <html>
     <head>
         <title>Wordbrew</title>
+        <style>
+            .pure-g {
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
         <div id="app"></div>
         <script src="index.js"></script>
+
+        <br/>
+        <div class="pure-g center">
+            <div class="pure-u-1-4"></div>
+            <div class="pure-u-1-2">
+                <img class="pure-img" src="images/wordbrew.png" style="height: 240px; margin: auto;"/>
+                <br/>
+
+                <h1 style="font-size: 42px;">WordBrew</h1>
+                <h3 style="font-weight: 300; color: darkgray;">More than a thesaurus. Less than a beer.</h3>
+                <br/>
+
+                <form class="pure-form">
+                    <input type="text" class="pure-input-2-3 pure-input-rounded" />
+                    <button type="submit" class="pure-button pure-button-secondary">Brew!</button>
+                </form>
+
+            </div>
+            <div class="pure-u-1-4"></div>
+        </div>
+
+
+        
     </body>
 </html>
