result page header

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -7,6 +7,7 @@
                 text-align: center;
             }
         </style>
+        <link rel="stylesheet" href="static/style.css">
     </head>
     <body>
         <div id="app"></div>
@@ -16,7 +17,7 @@
         <div class="pure-g center">
             <div class="pure-u-1-4"></div>
             <div class="pure-u-1-2">
-                <img class="pure-img" src="images/wordbrew.png" style="height: 240px; margin: auto;"/>
+                <img class="pure-img" src="static/images/wordbrew.png" style="height: 240px; margin: auto;"/>
                 <br/>
 
                 <h1 style="font-size: 42px;">WordBrew</h1>
