--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -2,17 +2,17 @@
 <html>
     <head>
         <title>Wordbrew</title>
-        <style>
-            .pure-g {
-                text-align: center;
-            }
-        </style>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <link rel="stylesheet" href="static/style.css">
     </head>
+    
     <body>
         <div id="app"></div>
         <script src="index.js"></script>
 
+        <!--
         <br/>
         <div class="pure-g center">
             <div class="pure-u-1-4"></div>
@@ -32,6 +32,7 @@
             </div>
             <div class="pure-u-1-4"></div>
         </div>
+    -->
 
 
         
