--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="static/style.css">
+
     </head>
 
     <body>
@@ -34,6 +35,23 @@
         </div>
     -->
 
+
+    <footer class="py-5 mt-5 bg-light bg-opacity-50">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    about
+                </div>
+                <div class="col">
+                    about
+                </div>
+                <div class="col">
+                    about
+                </div>
+            </div>
+        </div>
+        
+    </footer>
 
         
     </body>
