--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,6 +5,7 @@
         
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="A tool for exploring words and their related words. Similar to a thesaurus, but also much more.">
 
         <!-- Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-EHV03NKYWF"></script>
