--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,14 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="A tool for exploring words and their related words. Similar to a thesaurus, but also much more.">
 
-        <!-- Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-EHV03NKYWF"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'G-EHV03NKYWF');
-        </script>
+        <!-- Plausible Analytics -->
+        <script defer data-domain="wordbrew.io" src="https://plausible.io/js/plausible.js"></script>
     </head>
     <body>
         <div id="app"></div>
