--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="A tool for exploring words and their related words. Similar to a thesaurus, but also much more.">
 
         <!-- Plausible Analytics -->
-        <script defer data-domain="wordbrew.io" src="https://plausible.io/js/plausible.js"></script>
+        <script defer data-domain="wordbrew.app" src="https://plausible.io/js/script.js"></script>
     </head>
     <body>
         <div id="app"></div>
